gnome-shell (3.2.1-5) UNRELEASED; urgency=low

  * Add Breaks against gnome-tweak-tool (<< 3.2) to force its upgrade to a
    version that works with GNOME 3.2.

 -- Raphaël Hertzog <hertzog@debian.org>  Tue, 29 Nov 2011 11:32:54 +0100

gnome-shell (3.2.1-5) experimental; urgency=low

  * debian/patches/06-polkit-Find-the-best-user-to-authenticate-as.patch:
    + Added. When picking a user to authenticate with, try the current user
      first, then root and if all else fails the first user that is allowed to
      authenticate. (from upstream git)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 20 Nov 2011 22:28:42 +0000

gnome-shell (3.2.1-4) experimental; urgency=low

  * 05-NetworkMenu-don-t-query-DBus-properties-of-removed-o.patch:
    + Added. Don't (potentially) ask NM over D-Bus about an access point that
      was just removed. (From upstream git). As a side-effect this fixes
      gnome-shell freezing a while after unblacking.
  * 06-NetworkMenu-fix-regression-in-access-point-removed.patch
    + Added. Fix a regression in above patch (from upstream git)
  * 07-NetworkMenu-fix-logic-for-updating-wifi-icon.patch
    + Added. Fix the logic for connecting to the current wifi strength,
      prevents the network icon fro mbecoming stale (from upstream git)

 -- Sjoerd Simons <sjoerd@debian.org>  Sat, 19 Nov 2011 15:28:19 +0000

gnome-shell (3.2.1-3) experimental; urgency=low

  [ Josselin Mouette ]
  * Break fglrx-driver (<< 1:11-10). Closes: #648280.

  [ Sjoerd Simons ]
  * debian/control.in: Recommend gnome-contacts
  * debian/control.in: Update build-depends on the e-d-s libs to ensure we
    build against the same version as the libfolks e-d-s backend.

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 13 Nov 2011 16:40:12 +0100

gnome-shell (3.2.1-2) experimental; urgency=low

  * debian/control.in:
    - Tighten Depends on gir1.2-mutter-3.0 and gir1.2-glib-2.0.
      Closes: #646999
    - Drop Build-Depends on libgnome-menu-dev.
