@@ -1,0 +1,6 @@
+debian/tmp/usr/bin
+debian/tmp/usr/lib/gnome-shell
+debian/tmp/usr/lib/mozilla
+debian/tmp/usr/share/applications
+debian/tmp/usr/share/dbus-1
+debian/tmp/usr/share/man
